<resources>
    <string name="app_name">TravelMap</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="travel_map">Travel Map</string>
    <string name="by_caitlin_westerfield">By Caitlin Westerfield</string>
    <string name="travel_map_title">Travel Map</string>
    <string name="title_activity_full_maps">Map</string>
    <string name="title_activity_login">Travel Map</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="emptyError">This field cannot be empty</string>
    <string name="new_entry">NEW ENTRY</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="rating_1_10">Rating 1 - 10</string>
    <string name="type_of_location">Type of Location</string>
    <string name="description">Description</string>
    <string name="use_current_location">Use Current Location?</string>
    <string name="or_full_address">(Or Full Address)</string>
    <string name="post_entry">Post Entry</string>
    <string name="cancel_entry">Cancel Entry</string>
    <string name="password">Password</string>
    <string name="email">email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="dateView">Date (MM:DD:YY)</string>
    <string name="titleView">Title</string>
    <string name="view_map_btn">View Map</string>
    <string name="delete_btn">Delete</string>
    <string name="enterIntError">Please enter an integer between 1 and 10 for the rating!</string>
    <string name="entryCreated">Entry created</string>
    <string name="errorEntry">Error:</string>
    <string name="dateDefine">Date:</string>
    <string name="ratingDefine">Rating:</string>
    <string name="typeDefine">Type:</string>
    <string name="entryDefine">Entry:</string>
    <string name="journalDefine">Journal:</string>
    <string name="app_title">TRAVEL MAP</string>
    <string name="fillFieldsError">Please fill out all fields!</string>
    <string name="enterLocationError">Please enter a location!</string>
    <string name="im_here">I\'m here</string>
    <string name="permissionGranted">Permission granted</string>
    <string name="permissionNotGranted">Permission not granted</string>
    <string name="latDefine">Lat:</string>
    <string name="longDefine">Long:</string>
    <string name="blog_entries">Blog Entries</string>
    <string name="new_entry_nav">New Entry</string>
    <string name="map_nav">Map</string>
    <string name="user_created_toast">User created</string>
    <string name="not_success_toast">Not successs:</string>
    <string name="wait_for_it">Wait for it...</string>
</resources>
