<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hu.ait.travelmap.CreateEntryActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_entry"
        android:gravity="center_horizontal"
        android:textColor="#d50a17"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnPostEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/post_entry"/>
        <Button
            android:id="@+id/btnCancelEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/cancel_entry"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:textColor="#000000"
                android:textSize="18sp"/>
            <EditText
                android:id="@+id/editDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:textColor="#000000"
                android:textSize="18sp"/>
            <EditText
                android:id="@+id/editRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rating_1_10"
                android:textColor="#000000"
                android:textSize="18sp"/>
            <EditText
                android:id="@+id/editType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_of_location"
                android:textColor="#000000"
                android:textSize="18sp"/>
            <CheckBox
                android:id="@+id/currentLocChecked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/use_current_location"/>
            <EditText
                android:id="@+id/editLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/or_full_address"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_marginLeft="20dp"/>

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:textColor="#000000"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
